--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ HELP.md
 .gradle
 **/build/
 **/out/
-**/node_modules/
+node_modules/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
@@ -38,3 +38,4 @@ out/
 ### VS Code ###
 .vscode/
 /node_modules/
+"node_modules/"  
